force-app/main/default/objects/CostCenter__c/CostCenter__c.object-meta.xml
<CustomObject>
    <label>Cost Center</label>
    <nameField>
        <label>Cost Center Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cost Center</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>