force-app/main/default/objects/CostCenter__c/fields/AbacusKostenstelleBezeichnung__c.field-meta.xml
<CustomField>
    <fullName>AbacusKostenstelleBezeichnung__c</fullName>
    <label>Abacus Kostenstelle Bezeichnung</label>
    <length>255</length>
    <type>Text</type>
</CustomField>