force-app/main/default/objects/CostCenter__c/fields/AbacusMahnbereich__c.field-meta.xml
<CustomField>
    <fullName>AbacusMahnbereich__c</fullName>
    <label>Abacus Mahnbereich</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>