force-app/main/default/objects/CostCenter__c/fields/AbacusMahnverfahren__c.field-meta.xml
<CustomField>
    <fullName>AbacusMahnverfahren__c</fullName>
    <label>Abacus Mahnverfahren</label>
    <length>4</length>
    <type>Text</type>
</CustomField>