force-app/main/default/objects/CostCenter__c/fields/BankLocation__c.field-meta.xml
<CustomField>
    <fullName>BankLocation__c</fullName>
    <label>Bank Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>