force-app/main/default/objects/CostCenter__c/fields/BillingPeriod__c.field-meta.xml
<CustomField>
    <fullName>BillingPeriod__c</fullName>
    <label>Billing Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>