force-app/main/default/objects/CostCenter__c/fields/CHFBankClearing__c.field-meta.xml
<CustomField>
    <fullName>CHFBankClearing__c</fullName>
    <label>CHF Bank Clearing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>