force-app/main/default/objects/CostCenter__c/fields/CHFIBAN__c.field-meta.xml
<CustomField>
    <fullName>CHFIBAN__c</fullName>
    <label>CHF IBAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>