force-app/main/default/objects/CostCenter__c/fields/CHFQRIBAN__c.field-meta.xml
<CustomField>
    <fullName>CHFQRIBAN__c</fullName>
    <label>CHF QR IBAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>