force-app/main/default/objects/CostCenter__c/fields/CHFSWIFT__c.field-meta.xml
<CustomField>
    <fullName>CHFSWIFT__c</fullName>
    <label>CHF SWIFT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>