force-app/main/default/objects/CostCenter__c/fields/ClearingCostCenterNr__c.field-meta.xml
<CustomField>
    <fullName>ClearingCostCenterNr__c</fullName>
    <label>Clearing Cost Center Nr.</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>