force-app/main/default/objects/CostCenter__c/fields/CostCenterNr__c.field-meta.xml
<CustomField>
    <fullName>CostCenterNr__c</fullName>
    <label>Cost Center Nr.</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>