force-app/main/default/objects/CostCenter__c/fields/DateFromBillingPeriod__c.field-meta.xml
<CustomField>
    <fullName>DateFromBillingPeriod__c</fullName>
    <label>Date From (Billing Period)</label>
    <type>Date</type>
</CustomField>