force-app/main/default/objects/CostCenter__c/fields/DateUntilBillingPeriod__c.field-meta.xml
<CustomField>
    <fullName>DateUntilBillingPeriod__c</fullName>
    <label>Date Until (Billing Period)</label>
    <type>Date</type>
</CustomField>