force-app/main/default/objects/CostCenter__c/fields/EURBankClearing__c.field-meta.xml
<CustomField>
    <fullName>EURBankClearing__c</fullName>
    <label>EUR Bank Clearing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>