force-app/main/default/objects/CostCenter__c/fields/EURIBAN__c.field-meta.xml
<CustomField>
    <fullName>EURIBAN__c</fullName>
    <label>EUR IBAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>