force-app/main/default/objects/CostCenter__c/fields/EURQRIBAN__c.field-meta.xml
<CustomField>
    <fullName>EURQRIBAN__c</fullName>
    <label>EUR QR IBAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>