force-app/main/default/objects/CostCenter__c/fields/EURSWIFT__c.field-meta.xml
<CustomField>
    <fullName>EURSWIFT__c</fullName>
    <label>EUR SWIFT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>