force-app/main/default/objects/CostCenter__c/fields/FinanceDateLimit__c.field-meta.xml
<CustomField>
    <fullName>FinanceDateLimit__c</fullName>
    <label>Finance Date Limit</label>
    <type>Date</type>
</CustomField>