force-app/main/default/objects/CostCenter__c/fields/GBPBankClearing__c.field-meta.xml
<CustomField>
    <fullName>GBPBankClearing__c</fullName>
    <label>GBP Bank Clearing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>