force-app/main/default/objects/CostCenter__c/fields/GBPIBAN__c.field-meta.xml
<CustomField>
    <fullName>GBPIBAN__c</fullName>
    <label>GBP IBAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>