force-app/main/default/objects/CostCenter__c/fields/GBPSwift__c.field-meta.xml
<CustomField>
    <fullName>GBPSwift__c</fullName>
    <label>GBP Swift</label>
    <length>255</length>
    <type>Text</type>
</CustomField>