force-app/main/default/objects/CostCenter__c/fields/InvoiceDateLimit__c.field-meta.xml
<CustomField>
    <fullName>InvoiceDateLimit__c</fullName>
    <label>Invoice Date Limit</label>
    <type>Date</type>
</CustomField>