force-app/main/default/objects/CostCenter__c/fields/LegalAccount__c.field-meta.xml
<CustomField>
    <fullName>LegalAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Legal Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Internal Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cost Center</relationshipLabel>
    <relationshipName>CostCenter</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>