force-app/main/default/objects/CostCenter__c/fields/SGDBankClearing__c.field-meta.xml
<CustomField>
    <fullName>SGDBankClearing__c</fullName>
    <label>SGD Bank Clearing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>