force-app/main/default/objects/CostCenter__c/fields/SGDIBAN__c.field-meta.xml
<CustomField>
    <fullName>SGDIBAN__c</fullName>
    <label>SGD IBAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>