force-app/main/default/objects/CostCenter__c/fields/SGDSwift__c.field-meta.xml
<CustomField>
    <fullName>SGDSwift__c</fullName>
    <label>SGD Swift</label>
    <length>255</length>
    <type>Text</type>
</CustomField>