force-app/main/default/objects/CostCenter__c/fields/USDBankClearing__c.field-meta.xml
<CustomField>
    <fullName>USDBankClearing__c</fullName>
    <label>USD Bank Clearing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>