force-app/main/default/objects/CostCenter__c/fields/USDIBAN__c.field-meta.xml
<CustomField>
    <fullName>USDIBAN__c</fullName>
    <label>USD IBAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>