force-app/main/default/objects/CostCenter__c/fields/USDSWIFT__c.field-meta.xml
<CustomField>
    <fullName>USDSWIFT__c</fullName>
    <label>USD SWIFT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>