force-app/main/default/objects/CostCenter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LegalAccount__c</columns>
    <columns>AbacusKostenstelleBezeichnung__c</columns>
    <columns>CostCenterNr__c</columns>
    <columns>ClearingCostCenterNr__c</columns>
    <columns>Active__c</columns>
    <columns>AbacusMahnbereich__c</columns>
    <columns>AbacusMahnverfahren__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>