force-app/main/default/objects/CostCenter__c/listViews/All_Bank_Information.listView-meta.xml
<ListView>
    <fullName>All_Bank_Information</fullName>
    <columns>NAME</columns>
    <columns>BankName__c</columns>
    <columns>BankLocation__c</columns>
    <columns>CHFBankClearing__c</columns>
    <columns>CHFIBAN__c</columns>
    <columns>CHFSWIFT__c</columns>
    <columns>EURBankClearing__c</columns>
    <columns>EURIBAN__c</columns>
    <columns>EURSWIFT__c</columns>
    <columns>USDBankClearing__c</columns>
    <columns>USDIBAN__c</columns>
    <columns>USDSWIFT__c</columns>
    <columns>CHFQRIBAN__c</columns>
    <columns>EURQRIBAN__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Bank Information</label>
</ListView>