force-app/main/default/objects/CostCenter__c/listViews/Billing_Period.listView-meta.xml
<ListView>
    <fullName>Billing_Period</fullName>
    <columns>NAME</columns>
    <columns>DateFromBillingPeriod__c</columns>
    <columns>DateUntilBillingPeriod__c</columns>
    <columns>BillingPeriod__c</columns>
    <filterScope>Everything</filterScope>
    <label>Billing Period</label>
    <language>en_US</language>
    <sharedTo>
        <group>Skywalk_FIN_Alle</group>
    </sharedTo>
</ListView>