force-app/main/default/objects/CostCenter__c/listViews/Invoice_Finance_Date_Limit.listView-meta.xml
<ListView>
    <fullName>Invoice_Finance_Date_Limit</fullName>
    <columns>NAME</columns>
    <columns>AbacusKostenstelleBezeichnung__c</columns>
    <columns>InvoiceDateLimit__c</columns>
    <columns>FinanceDateLimit__c</columns>
    <filterScope>Everything</filterScope>
    <label>Invoice &amp; Finance Date Limit</label>
    <language>en_US</language>
    <sharedTo>
        <group>Skywalk_FIN_Alle</group>
    </sharedTo>
</ListView>